--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
     ],
     "require": {
         "scurriio/utils": "^1.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.2"
     }
 }
